syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "ApiKillerProto";
option go_package =  "grpc/apikiller.proto;apikiller_proto";

package apikiller;

service API {
  rpc getAllUsers (APIRequest) returns (APIReply) {}
  rpc getUserById (UserArgs) returns (APIReply) {}
  rpc createUser (UserArgs) returns (APIReply) {}
  rpc deleteUser (UserArgs) returns (APIReply) {}
  rpc updateUser (UserArgs) returns (APIReply) {}
  rpc createPost (PostArgs) returns (APIReply) {}

}

message APIRequest {
  int32 limit = 1;
  int32 page = 2;
}


message UserArgs {
  string id = 1;
  string name = 2;
  string surname = 3;
}

message PostArgs {
  string id = 1;
  string title = 2;
  string AuthorId = 3;
}

message APIReply {
  string message = 1;
}
